<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Call Emergency"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/jian_ge"
            android:layout_width="14dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/call_dailylife"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="CALL" />

    </LinearLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent">
        <TextView
            android:id="@+id/start_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="18dp"
            android:paddingBottom="18dp"
            android:text="@string/Triage_program"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/able_to_walk"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView8" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Location"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:textSize="18sp"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@+id/start_title" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3">

            <Button
                android:id="@+id/START_able_to_walk_yes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/yes" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:width="40dp"
                android:text="" />

            <Button
                android:id="@+id/START_able_to_walk_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/no" />

        </LinearLayout>

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/fragment_spontaneousBreath"
            android:name="com.example.triage_mci.spontaneous_breathing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="visible"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linearLayout" />

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/fragment_respiratory_rate"
            android:name="com.example.triage_mci.respiratory_rate"
            android:layout_width="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:visibility="visible"
            app:layout_constraintTop_toBottomOf="@id/fragment_spontaneousBreath"
            android:layout_height="wrap_content" />

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/fragment_perfusion_rate"
            android:name="com.example.triage_mci.perfusion"
            android:layout_width="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:visibility="visible"
            app:layout_constraintTop_toBottomOf="@id/fragment_respiratory_rate"
            android:layout_height="wrap_content" />

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/fragment_spontaneousBreath_reassess"
            android:name="com.example.triage_mci.breathing_reassess"
            android:layout_width="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:visibility="visible"
            app:layout_constraintTop_toBottomOf="@id/fragment_perfusion_rate"
            android:layout_height="wrap_content" />

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/fragment_mental_status"
            android:name="com.example.triage_mci.mental_status"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:visibility="visible"
            app:layout_constraintTop_toBottomOf="@id/fragment_perfusion_rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</LinearLayout>
